[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Destipy"
version = "0.69.0"
authors = [
  { name="Sedam", email="sedam.code@gmail.com" },
]
keywords = ["bungie", "destiny", "async", "wrapper", "api"]
description = "Asynchronous Python Wrapper for the Bungie API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 3 - Alpha',
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp >= 3.7.4",
]

[project_urls]
Source = "https://github.com/soares-daniel/Destipy/"
